long title in static html wrap fix

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -169,6 +169,10 @@ div.help {
 	white-space: nowrap;
 }
 
+p.title {
+	white-space: normal;
+}
+
 ul.job {
 	clear: both;
 	font-size: 10pt;
